# arqms-device

./: .gitignore  LICENSE  README.md
firmware/main/: CMakeLists.txt  DeviceStateMachine.cpp  DeviceStateMachine.h  HumiDevice.cpp  HumiPlatform.h  Kconfig.projbuild  Platform.h
firmware/main/CloudLink/: CloudLinkSenderIfc.h  CloudLinkTask.cpp  CloudLinkTask.h  ConfigProviderIfc.h  LocalCtrlHandler.cpp  LocalCtrlHandler.h  LocalCtrlHandlerIfc.h  LocalCtrlProperty.h  Wifi.cpp  Wifi.h  WifiStateMachine.cpp  WifiStateMachine.h  WifiStateMachineCallbackIfc.h  WifiStateMachineIfc.h
firmware/main/CloudLink/ConfigurationService/: ConfigurationProperty.h  ConfigurationProviderIfc.h  ConfigurationService.cpp  ConfigurationService.h  ConfigurationServiceIfc.h  KeyValueStorageIfc.h
firmware/main/CloudLink/MqttService/: MqttService.cpp  MqttService.h  MqttServiceIfc.h  MqttUtil.h
firmware/main/CloudLink/MqttService/HDP/: HDP.h  HDPDeviceConfig.h  (+4 more)
firmware/main/CloudLink/Wifi/: Wifi.cpp  Wifi.h
firmware/main/Control/: ControlTask.cpp  ControlTask.h
firmware/main/Control/CoreSM/: CoreSM.cpp  CoreSM.h  CoreSMIfc.h
firmware/main/Control/Persistency/: KeyValueStorageIfc.h  NvsLayout.cpp  NvsLayout.h  NvsStorageDriver.cpp  NvsStorageDriver.h  NvsStorageLayout.h  NvsUtil.cpp  NvsUtil.h  StorageDriverIfc.h
firmware/main/Control/PushBtn/: ButtonSM.cpp  ButtonSM.h  ButtonSMIfc.h  GpioIrqHandler.cpp  GpioIrqHandler.h  PushBtnCtrlTask.cpp  PushBtnCtrlTask.h
firmware/main/DeviceState/: DeviceHandler.cpp  DeviceHandler.h  DeviceSettings.cpp  DeviceSettings.h  DeviceStateMachine.cpp  DeviceStateMachine.h
firmware/main/DeviceStorage/: ConfigurationLayout.h  DeviceStorage.cpp  DeviceStorage.h
firmware/main/Drivers/: ADC.cpp  ADC.h  AirIndicatorDriver.cpp  AirIndicatorDriver.h  ApplicationHardwareConfig.cpp  ApplicationHardwareConfig.h  BME680Driver.cpp  BME680Driver.h  BME680Registers.h  SK6805Driver.cpp  SK6805Driver.h  StartupController.cpp  StartupController.h  bme68x.c  bme68x.h
firmware/main/Events/: AirQualityEvent.cpp  AirQualityEvent.h  BatteryStatusEvent.cpp  BatteryStatusEvent.h  ButtonEvent.cpp  ButtonEvent.h  DeviceConfigEvent.cpp  DeviceConfigEvent.h  DeviceInfoEvent.cpp  DeviceInfoEvent.h  DeviceSettingsEvent.cpp  DeviceSettingsEvent.h  DeviceStatusEvent.cpp  DeviceStatusEvent.h  DisplayInfoEvent.cpp  DisplayInfoEvent.h  EventDispatcher.cpp  EventDispatcher.h  EventHandlerIfc.h  EventIdentifiers.h  EventLoop.cpp  EventLoop.h  EventLoopIfc.h  Events.h  SensorDataEvent.cpp  SensorDataEvent.h  SensorStatusEvent.cpp  SensorStatusEvent.h  WifiSettingsEvent.cpp  WifiSettingsEvent.h  WifiStatusEvent.cpp  WifiStatusEvent.h
firmware/main/GuiUpdater/: AirIndicatorDriver.cpp  AirIndicatorDriver.h  GuiUpdaterTask.cpp  GuiUpdaterTask.h
firmware/main/Hmi/: HmiManager.cpp  HmiManager.h
firmware/main/MeasFilter/: MeasFilterTask.cpp  MeasFilterTask.h  MovingAvgFilter.cpp  MovingAvgFilter.h
firmware/main/MeasSensor/: MeasSensorTask.cpp  MeasSensorTask.h
firmware/main/PowerManagement/: PowerManagementTask.cpp  PowerManagementTask.h
firmware/main/Rtos/: EventIfc.h  EventPublisherIfc.h  EventPublisherSingle.h  EventRuntime.cpp  EventRuntime.h  EventSinglePublisher.h  EventSubscriberIfc.h  TaskBase.cpp  TaskBase.h  TaskFactory.h  TaskIfc.h
firmware/main/Rtos/Serialization/: Deserializer.h  SerializableIfc.h  Serializer.h
firmware/main/Sensor/: SensorManager.cpp  SensorManager.h
firmware/main/WiFi/: LocalCtrlHandler.cpp  LocalCtrlHandler.h  MqttHandler.cpp  MqttHandler.h  WiFiManager.cpp  WiFiManager.h
(+77 files in other folders)
